--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
+    "databricks-sdk",
     "inflect",
     "planck",
     "prompt_toolkit",
@@ -43,6 +44,7 @@ dependencies = [
     "pulumi_random",
     "pyyaml",
     "pydantic>=2",
+    "python-dateutil",
     "settus",
     "typer[all]",
 ]
