--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -40,7 +40,7 @@ jobs:
           mkdir $CWD
 
       - name: run quickstart
-        run: laktory quickstart
+        run: laktory quickstart -b terraform -n Standard_DS3_v2
         working-directory: ${{ env.CWD }}
 
 #      - name: Install Laktory
