--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -1,10 +1,10 @@
 name: run-quickstart
 
 on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
+#  pull_request:
+#    types:
+#      - opened
+#      - synchronize
   workflow_call:
     inputs:
       env:
