--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -5,6 +5,12 @@ on:
 #    types:
 #      - opened
 #      - synchronize
+  workflow_dispatch:
+    logLevel:
+      description: 'Log level'
+      default: 'info'
+    branches:
+      - main
   workflow_call:
     inputs:
       env:
