DataFrame Pipeline Model (#186)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dynamic = ["version"]
 dependencies = [
     "databricks-sdk",
     "inflect",
+    "networkx",
     "planck",
     "prompt_toolkit",
     "pulumi",
@@ -58,6 +59,7 @@ dev = [
     "mkdocs-material",
     "mkdocs-video",
 #    "mkdocs-snippets",
+    "plotly",
 ]
 spark = [
     "pandas",
