--- a/tests/data/stack.yaml
+++ b/tests/data/stack.yaml
@@ -10,7 +10,7 @@ resources:
     databricks:  # for terraform, provider name must match resource type prefix
       host: ${vars.DATABRICKS_HOST}
       token: ${vars.DATABRICKS_TOKEN}
-  pipelines:
+  dltpipelines:
     pl-custom-name:
       name: pl-stock-prices-ut-stack
       libraries:
@@ -46,7 +46,7 @@ resources:
         - task_key: run-pipeline
           pipeline_task:
             pipeline_id: ${resources.pl-custom-name.id}  # LAKTORY STYLE
-#            pipeline_id: ${resources.pipelines.pl-custom-name.id}  # BUNDLES STYLE
+#            pipeline_id: ${resources.dltpipelines.pl-custom-name.id}  # BUNDLES STYLE
 #            pipeline_id: ${databricks_pipeline.pl-custom-name.id}  # TERRAFORM STYLE
 #            pipeline_id: ${pl-custom-name.id}  # PULUMI STYLE
 
@@ -58,7 +58,7 @@ environments:
       node_type_id: Standard_DS3_v2
   prod:
     resources:
-      pipelines:
+      dltpipelines:
         pl-custom-name:
           development: False
     variables:
