--- a/tests/data/stack.yaml
+++ b/tests/data/stack.yaml
@@ -10,19 +10,23 @@ resources:
     databricks:  # for terraform, provider name must match resource type prefix
       host: ${vars.DATABRICKS_HOST}
       token: ${vars.DATABRICKS_TOKEN}
-  databricks_dltpipelines:
+  pipelines:
     pl-custom-name:
       name: pl-stock-prices-ut-stack
-      libraries:
-        - notebook:
-            path: /pipelines/dlt_brz_template.py
-      access_controls:
-        - group_name: account users
-          permission_level: CAN_VIEW
-        - group_name: role-engineers
-          permission_level: CAN_RUN
-      options:
-        provider: ${resources.databricks}
+      engine: DLT
+      nodes: []
+      dlt:
+        resource_name: dlt-custom-name
+        libraries:
+          - notebook:
+              path: /pipelines/dlt_brz_template.py
+        access_controls:
+          - group_name: account users
+            permission_level: CAN_VIEW
+          - group_name: role-engineers
+            permission_level: CAN_RUN
+        options:
+          provider: ${resources.databricks}
   databricks_jobs:
     job-stock-prices-ut-stack:
       name: job-stock-prices-ut-stack
@@ -45,7 +49,7 @@ resources:
                 package: yfinance
         - task_key: run-pipeline
           pipeline_task:
-            pipeline_id: ${resources.pl-custom-name.id}  # LAKTORY STYLE
+            pipeline_id: ${resources.dlt-custom-name.id}  # LAKTORY STYLE
 #            pipeline_id: ${resources.dltpipelines.pl-custom-name.id}  # BUNDLES STYLE
 #            pipeline_id: ${databricks_pipeline.pl-custom-name.id}  # TERRAFORM STYLE
 #            pipeline_id: ${pl-custom-name.id}  # PULUMI STYLE
@@ -58,9 +62,10 @@ environments:
       node_type_id: Standard_DS3_v2
   prod:
     resources:
-      databricks_dltpipelines:
+      pipelines:
         pl-custom-name:
-          development: False
+          dlt:
+            development: False
     variables:
       env: prod
       is_dev: false
