--- a/laktory/cli/quickstart_stack.yaml
+++ b/laktory/cli/quickstart_stack.yaml
@@ -6,66 +6,66 @@ resources:
       path: /Workspace/.laktory/landing/events/yahoo-finance/stock_price/stock_prices.json
       source: ./data/stock_prices.json
   databricks_notebooks:
-    notebook-pipelines-dlt-brz-template:
-      source: ./notebooks/pipelines/dlt_brz_template.py
-    notebook-pipelines-dlt-slv-template:
-      source: ./notebooks/pipelines/dlt_slv_template.py
-  databricks_dltpipelines:
+    notebook-pipelines-dlt-template:
+      source: ./notebooks/pipelines/dlt_template.py
+  pipelines:
     pl-quickstart:
       name: pl-quickstart
-      channel: PREVIEW
-      development: ${vars.is_dev}
-      target: default
-      clusters:
-      - name: default
-        node_type_id: TBD
-        autoscale:
-          min_workers: 1
-          max_workers: 2
-      configuration:
-        pipeline_name: pl-quickstart
-      libraries:
-      - notebook:
-          path: /.laktory/pipelines/dlt_brz_template.py
-      - notebook:
-          path: /.laktory/pipelines/dlt_slv_template.py
-      tables:
-      - name: brz_stock_prices
-        builder:
-          layer: BRONZE
-          source:
-            path: dbfs:/Workspace/.laktory/landing/events/stock_price
-            as_stream: true
-            format: JSON
-      - name: slv_stock_prices
+      engine: DLT
+      dlt:
+        development: ${vars.is_dev}
+        target: default
+        clusters:
+        - name: default
+          node_type_id: TBD
+          autoscale:
+            min_workers: 1
+            max_workers: 2
+        configuration:
+          pipeline_name: pl-quickstart
+        libraries:
+        - notebook:
+            path: /.laktory/pipelines/dlt_template.py
+      nodes:
+      - id: brz_stock_prices
+        layer: BRONZE
+        source:
+          path: dbfs:/Workspace/.laktory/landing/events/stock_price
+          as_stream: true
+          format: JSON
+        sink:
+          table_name: brz_stock_prices
+
+      - id: slv_stock_prices
+        layer: SILVER
         expectations:
         - name: positive_price
           expression: open > 0
           action: FAIL
-        builder:
-          layer: SILVER
-          source:
-            table_name: brz_stock_prices
-            as_stream: true
-          spark_chain:
-            nodes:
-            - column:
-                name: created_at
-                type: timestamp
-              sql_expression: data.created_at
-            - column:
-                name: symbol
-              spark_func_args:
-              - data.symbol
-              spark_func_name: coalesce
-            - column:
-                name: open
-                type: double
-              sql_expression: data.open
-            - column:
-                name: close
-                type: double
-              sql_expression: data.close
+        source:
+          node_id: brz_stock_prices
+          as_stream: true
+        sink:
+          table_name: slv_stock_prices
+        chain:
+          nodes:
+          - column:
+              name: created_at
+              type: timestamp
+            sql_expression: data.created_at
+          - column:
+              name: symbol
+            spark_func_args:
+            - data.symbol
+            spark_func_name: coalesce
+          - column:
+              name: open
+              type: double
+            sql_expression: data.open
+          - column:
+              name: close
+              type: double
+            sql_expression: data.close
 
   providers:
     databricks:
