--- a/tests/data/stack.yaml
+++ b/tests/data/stack.yaml
@@ -13,7 +13,7 @@ resources:
   pipelines:
     pl-custom-name:
       name: pl-stock-prices-ut-stack
-      engine: DLT
+      orchestrator: DLT
       nodes: []
       dlt:
         resource_name: dlt-custom-name
