--- a/laktory/cli/quickstart_stack.yaml
+++ b/laktory/cli/quickstart_stack.yaml
@@ -11,7 +11,7 @@ resources:
   pipelines:
     pl-quickstart:
       name: pl-quickstart
-      engine: DLT
+      orchestrator: DLT
       dlt:
         development: ${vars.is_dev}
         target: default
@@ -25,9 +25,9 @@ resources:
           pipeline_name: pl-quickstart
         libraries:
         - notebook:
-            path: /.laktory/pipelines/dlt_template.py
+            path: /.laktory/dlt/dlt_template.py
       nodes:
-      - id: brz_stock_prices
+      - name: brz_stock_prices
         layer: BRONZE
         source:
           path: dbfs:/Workspace/.laktory/landing/events/stock_price
@@ -36,14 +36,14 @@ resources:
         sink:
           table_name: brz_stock_prices
 
-      - id: slv_stock_prices
+      - name: slv_stock_prices
         layer: SILVER
         expectations:
         - name: positive_price
           expression: open > 0
           action: FAIL
         source:
-          node_id: brz_stock_prices
+          node_name: brz_stock_prices
           as_stream: true
         sink:
           table_name: slv_stock_prices
