--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,6 +158,7 @@ nav:
       - DataSources:
         - BaseDataSource: api/models/datasources/basedatasource.md
         - FileDataSource: api/models/datasources/filedatasource.md
+        - MemoryDataSource: api/models/datasources/memorydatasource.md
         - PipelineNodeDataSource: api/models/datasources/pipelinenodedatasource.md
         - TableDataSource: api/models/datasources/tabledatasource.md
       - Resources:
@@ -193,8 +194,6 @@ nav:
           - api/models/resources/databricks/column.md
           - api/models/resources/databricks/schema.md
           - api/models/resources/databricks/table.md
-          - TableExpectations: api/models/resources/databricks/tableexpectation.md
-          - TableBuilder: api/models/resources/databricks/tablebuilder.md
           - api/models/resources/databricks/volume.md
         - Providers:
           - AzureProvider: api/models/resources/providers/azure.md
