--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,6 +161,10 @@ nav:
         - MemoryDataSource: api/models/datasources/memorydatasource.md
         - PipelineNodeDataSource: api/models/datasources/pipelinenodedatasource.md
         - TableDataSource: api/models/datasources/tabledatasource.md
+      - Pipelines:
+        - Pipeline: api/models/pipeline.md
+        - PipelineNode: api/models/pipelinenode.md
+        - PipelineNodeExpectation: api/models/pipelinenodeexpectation.md
       - Resources:
         - BaseResource: api/models/resources/baseresource.md
         - PulumiResource: api/models/resources/pulumiresource.md
@@ -169,6 +173,7 @@ nav:
           - AccessControl: api/models/resources/databricks/accesscontrol.md
           - api/models/resources/databricks/cluster.md
           - api/models/resources/databricks/directory.md
+          - DLT Pipeline: api/models/resources/databricks/dltpipeline.md
           - ExternalLocation: api/models/resources/databricks/externallocation.md
           - api/models/resources/databricks/grants.md
           - api/models/resources/databricks/group.md
@@ -179,7 +184,6 @@ nav:
           - MwsPermissionAssignment: api/models/resources/databricks/mwspermissionassignment.md
           - api/models/resources/databricks/mws.md
           - api/models/resources/databricks/notebook.md
-          - Pipeline: api/models/resources/databricks/pipeline.md
           - api/models/resources/databricks/secret.md
           - SecretAcl: api/models/resources/databricks/secretacl.md
           - SecretScope: api/models/resources/databricks/secretscope.md
@@ -200,9 +204,6 @@ nav:
           - AzurePulumiProvider: api/resources/models/providers/azurepulumi.md
           - AWSProvider: api/models/resources/providers/aws.md
           - DatabricksProvider: api/resources/models/providers/databricks.md
-      - Pipelines:
-        - Pipeline: api/models/pipeline.md
-        - PipelineNode: api/models/pipelinenode.md
       - Spark:
         - SparkChain: api/models/spark/sparkchain.md
         - SparkChainNode: api/models/spark/sparkchainnode.md
