--- a/tests/data/pl-spark-streaming.yaml
+++ b/tests/data/pl-spark-streaming.yaml
@@ -23,7 +23,7 @@ nodes:
     table_name: slv_stock_prices
     checkpoint_location: /tmp/slv2/
     mode: APPEND
-  chain:
+  transformer:
     nodes:
     - allow_missing_column_args: false
       column:
