--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,13 +123,11 @@ nav:
   - Concepts:
     - Design Principles: concepts/design.md
     - Models:
-      - Intro: concepts/models.md
-      - Pipeline: concepts/pipeline.md
-      - Data Sources and Sinks: concepts/sourcessinks.md
-      - Spark Chain: concepts/sparkchain.md
-      - Data Event: concepts/dataevent.md
-#      - Table: concepts/table.md
-#      - Table Builder: concepts/tablebuilder.md
+      - Intro: concepts/models/models.md
+      - Pipeline: concepts/models/pipeline.md
+      - Data Sources and Sinks: concepts/models/sourcessinks.md
+      - Spark Chain: concepts/models/sparkchain.md
+      - Data Event: conceptsmodels/dataevent.md
     - Stack: concepts/stack.md
     - Variables: concepts/variables.md
     - Deployment (IaC): concepts/deployment.md
